--- a/src/MAZE.Api/MAZE.Api.csproj
+++ b/src/MAZE.Api/MAZE.Api.csproj
@@ -6,25 +6,22 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Worlds\Test.png" />
-  </ItemGroup>
-
-
-  <ItemGroup>
     <Content Include="openapi.yaml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Worlds\Test.png">
+    <Content Include="Worlds\Castle.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.4" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.4.1" />
+    <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
