--- a/src/MAZE.Client/ClientApp/package.json
+++ b/src/MAZE.Client/ClientApp/package.json
@@ -22,9 +22,11 @@
     "@angular/platform-server": "8.2.12",
     "@angular/router": "8.2.12",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
+    "@types/d3": "^5.7.2",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.3",
+    "d3": "^5.16.0",
     "jquery": "3.4.1",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
@@ -47,7 +49,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "typescript": "3.5.3"
+    "typescript": "^3.5.3"
   },
   "optionalDependencies": {
     "node-sass": "^4.12.0",
