--- a/src/MAZE.AngularClient/package.json
+++ b/src/MAZE.AngularClient/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "maze-client",
+  "name": "maze-client-angular",
   "version": "1.0.0",
-  "description": "OpenAPI client for maze-client",
+  "description": "OpenAPI client for maze-client-angular",
   "author": "OpenAPI-Generator Contributors",
   "keywords": [
     "openapi-client",
