--- a/.github/workflows/publish_angular_client.yml
+++ b/.github/workflows/publish_angular_client.yml
@@ -17,7 +17,7 @@ jobs:
       - run: npm install @openapitools/openapi-generator-cli
       - run: npx openapi-generator generate -i src/MAZE.Specification/openapi.yaml -g typescript-angular -o ./temp/ --additional-properties=npmName=maze-client-angular,ngVersion=8.0.0
       - run: cd ./temp/
-      - run: npm ci
+      - run: npm install
       - run: npm run build
 
   publish-npm:
