--- a/.github/workflows/publish_angular_client.yml
+++ b/.github/workflows/publish_angular_client.yml
@@ -15,8 +15,8 @@ jobs:
         with:
           node-version: 12
       - run: npm install @openapitools/openapi-generator-cli
-      - run: npx openapi-generator generate -i src/MAZE.Specification/openapi.yaml -g typescript-angular -o ./temp/ --additional-properties=npmName=maze-client-angular,ngVersion=8.0.0
-      - run: cd ./temp/
+      - run: npx openapi-generator generate -i src/MAZE.Specification/openapi.yaml -g typescript-angular -o temp --additional-properties=npmName=maze-client-angular,ngVersion=8.0.0
+      - run: cd temp
       - run: npm install
       - run: npm run build
 
@@ -29,7 +29,7 @@ jobs:
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org/
-      - run: cd ./temp/
+      - run: cd temp
       - run: npm publish dist
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
