--- a/.github/workflows/publish_angular_client.yml
+++ b/.github/workflows/publish_angular_client.yml
@@ -16,9 +16,10 @@ jobs:
           node-version: 12
       - run: npm install @openapitools/openapi-generator-cli
       - run: npx openapi-generator generate -i src/MAZE.Specification/openapi.yaml -g typescript-angular -o temp --additional-properties=npmName=maze-client-angular,ngVersion=8.0.0
-      - run: cd temp
       - run: npm install
+        working-directory: temp
       - run: npm run build
+        working-directory: temp
 
   publish-npm:
     needs: build
@@ -29,7 +30,7 @@ jobs:
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org/
-      - run: cd temp
       - run: npm publish dist
+        working-directory: temp
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
