--- a/src/MAZE.Web/ClientApp/package.json
+++ b/src/MAZE.Web/ClientApp/package.json
@@ -28,6 +28,7 @@
     "core-js": "^3.3.3",
     "d3": "^5.16.0",
     "jquery": "3.4.1",
+    "maze-client-angular": "1.0.0",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
