--- a/src/MAZE.Web/ClientApp/package.json
+++ b/src/MAZE.Web/ClientApp/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "8.2.12",
     "@angular/platform-server": "8.2.12",
     "@angular/router": "8.2.12",
+    "@kokitotsos/maze-client-angular": "^1.0.0",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "@types/d3": "^5.7.2",
     "aspnet-prerendering": "^3.0.1",
@@ -28,7 +29,6 @@
     "core-js": "^3.3.3",
     "d3": "^5.16.0",
     "jquery": "3.4.1",
-    "maze-client-angular": "1.0.0",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
