--- a/src/MAZE.Web/ClientApp/package.json
+++ b/src/MAZE.Web/ClientApp/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-server": "8.2.12",
     "@angular/router": "8.2.12",
     "@kokitotsos/maze-client-angular": "^1.0.0",
+    "@microsoft/signalr": "^3.1.4",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "@types/d3": "^5.7.2",
     "aspnet-prerendering": "^3.0.1",
