--- a/src/MAZE/MAZE.csproj
+++ b/src/MAZE/MAZE.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="GenericDataStructures" Version="1.1.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
