--- a/src/MAZE.Web/Properties/launchSettings.json
+++ b/src/MAZE.Web/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "game/0",
+      "launchUrl": "gameWithControl/0",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
