--- a/src/MAZE.Api/MAZE.Api.csproj
+++ b/src/MAZE.Api/MAZE.Api.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="GenericDataStructures" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.5" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.5" />
     <PackageReference Include="Microsoft.Azure.SignalR" Version="1.5.0" />
@@ -29,7 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MAZE\MAZE.csproj" />
+    <ProjectReference Include="..\MAZE.Persisting\MAZE.Persisting.csproj" />
   </ItemGroup>
 
 
