Changed game id back to string. Moved event storage from memory to EventStore. Added Azure template for deploying EventStore.

--- a/src/MAZE.Api/appsettings.json
+++ b/src/MAZE.Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "KeyVaultName": "maze"
+  "KeyVaultName": "maze",
+  "EventStore": {
+    "FullyQualifiedDomainName": "maze-events.northeurope.azurecontainer.io"
+  }
 }
