--- a/src/MAZE.Persisting/MAZE.Persisting.csproj
+++ b/src/MAZE.Persisting/MAZE.Persisting.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="EventStore.Client" Version="20.6.0" />
     <PackageReference Include="GenericDataStructures" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.5" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
